Trying new fixes for alignent and spacing for buttons

--- a/src/screens/Home/mstyle.css
+++ b/src/screens/Home/mstyle.css
@@ -629,11 +629,11 @@
   .android-large .frame-6 {
     align-items: center;
     display: flex;
+    justify-content: space-between; /* Add this line */
+    width: 100%; /* Adjust this as needed */
     gap: 11px;
-    left: 15px;
     position: absolute;
     top: 348px;
-    width: fit-content;
   }
   
   .android-large .frame-7 {
@@ -677,10 +677,11 @@
     display: flex;
     flex-direction: column;
     gap: 37px;
-    left: 133px;
     position: absolute;
-    top: 60px;
-    width: fit-content;
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
   }
   
   .android-large .text-wrapper-12 {
